--- a/导航.html
+++ b/导航.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
 <style>
+    	@font-face {
+         font-family: "MyFont";
+         src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");
+}
     *{
          padding:0;
          margin:0;
@@ -18,14 +22,16 @@
       position:relative;
        left: 300px;
       margin-left:20px;
+      font-family:MyFont;
         }
 
       p{
             font-weight: bold;
             font-style: italic;
             position: absolute;
-             left: 80px;
-              display:inline;                }
+            left: 80px;
+            display:inline;    
+            font-family:MyFont;}
      </style>
 </head>
 <body style="background-color: rgba(0,104,139,0.5)" >
