--- a/成都词云.html
+++ b/成都词云.html
@@ -36,7 +36,7 @@
       }
     </style>
   </head>
-  <body>
+ <body style="background-color: rgba(240,248,255,0.5)">
     <center>
       <div id="main" style="height: 600px; width: 800px"></div>
       <div id="info-container">
