--- a/成都词云.html
+++ b/成都词云.html
@@ -13,11 +13,12 @@
         float: left;
       }
       #info-container {
-        margin-top: 20px;
+/*         margin-top: 20px; */
         display: flex;
         justify-content: center; /* 水平居中 */
         align-items: center; /* 垂直居中 */
-        flex-direction: row;
+        flex-direction: column;
+        padding；10px;
       }
 
       #info-text {
