--- a/成都词云.html
+++ b/成都词云.html
@@ -29,11 +29,11 @@
       }
 
       #info-image {
-        order:-1;
+
         /* 注意：这里我们直接对 #info-image 应用样式，而不是 #info-image img */
         max-width: 100%; /* 响应式，最大宽度为容器宽度 */
         height: auto; /* 保持图片的原始纵横比 */
-        margin: 0 auto;
+        margin-bottom:10px;
       }
     </style>
   </head>
