--- a/成都词云.html
+++ b/成都词云.html
@@ -7,6 +7,9 @@
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts-wordcloud.min.js"></script>
     <title>chengdu_voc</title>
     <style>
+      @font-face {
+         font-family: "MyFont";
+         src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");
       #wordcloud {
         width: 50%;
         height: 700px;
@@ -25,6 +28,7 @@
         flex: 1;
         max-width: 100%; /* 响应式，最大宽度为容器宽度 */
         font-size: 20px;
+        font-family:MyFont;
         text-align: center; /* 如果你想要文本在垂直堆叠时也居中 */
       }
 
