--- a/成都词云.html
+++ b/成都词云.html
@@ -13,6 +13,7 @@
       #wordcloud {
         width: 50%;
         height: 700px;
+        font-family:MyFont;
         float: left;
       }
       #info-container {
@@ -28,7 +29,7 @@
         flex: 1;
         max-width: 100%; /* 响应式，最大宽度为容器宽度 */
         font-size: 20px;
-        font-family:MyFont;
+        font-family：MyFont;
         text-align: center; /* 如果你想要文本在垂直堆叠时也居中 */
       }
 
@@ -43,7 +44,7 @@
   </head>
  <body style="background-color: rgba(240,248,255,0.5)">
     <center>
-      <div id="main" style="height: 400px; width: 600px"></div>
+      <div id="main" style="height: 400px; width: 500px"></div>
       <div id="info-container">
         <div id="info-text"></div>
         <div id="info-image"></div>
@@ -250,6 +251,7 @@
             // 文本样式
             fontSize: 32, // 字体大小，你可以根据需要调整这个值
             color: "#000", // 字体颜色，你也可以修改这个值
+            font-family:MyFont
           },
         },
         series: [
