--- a/成都词云.html
+++ b/成都词云.html
@@ -9,11 +9,12 @@
     <style>
       @font-face {
          font-family: "MyFont";
-         src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");
+         src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");}
       #wordcloud {
         width: 50%;
         height: 700px;
         float: left;
+        font-family：MyFont;
       }
       #info-container {
 /*         margin-top: 20px; */
@@ -250,6 +251,7 @@
             // 文本样式
             fontSize: 32, // 字体大小，你可以根据需要调整这个值
             color: "#000", // 字体颜色，你也可以修改这个值
+            font-family：MyFont
           },
         },
         series: [
