--- a/成都词云.html
+++ b/成都词云.html
@@ -9,7 +9,7 @@
     <style>
       @font-face {
          font-family: "MyFont";
-         src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");}
+         src: url("fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");}
       #wordcloud {
         width: 50%;
         height: 700px;
