--- a/成都词云.html
+++ b/成都词云.html
@@ -9,7 +9,7 @@
     <style>
       @font-face {
          font-family: 'MyFont';
-         src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");}
+         src: url("fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");}
       #wordcloud {
         width: 50%;
         height: 700px;
@@ -262,7 +262,6 @@
             sizeRange: [20, 40],
             rotationRange: [-45, 90],
             textStyle: {
-              font-family: MyFont;
               color: function () {
                 return (
                   "rgb(" +
