--- a/成都词云.html
+++ b/成都词云.html
@@ -8,8 +8,8 @@
     <title>chengdu_voc</title>
     <style>
       @font-face {
-         font-family: 'MyFont';
-         src: url("fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");}
+         font-family: "MyFont";
+         src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");}
       #wordcloud {
         width: 50%;
         height: 700px;
