--- a/海南词云.html
+++ b/海南词云.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
-    <script src="https://raw.gitcode.com/ecomfe/echarts-wordcloud/raw/master/dist/echarts-wordcloud.min.js"></script>
+    <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts.min.js"></script>
+    <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts-wordcloud.min.js"></script>
     <title>hainan_voc</title>
     <style>
       @font-face {
@@ -43,7 +43,7 @@
   </head>
   <body>
     <center>
-      <div id="main" style="height: 600px; width: 800px"></div>
+      <div id="main" style="height: 400px; width: 500px"></div>
       <div id="info-container">
         <div id="info-text"></div>
         <div id="info-image"></div>
