--- a/全国地图.html
+++ b/全国地图.html
@@ -32,8 +32,8 @@ myChart.setOption(
 visualMap: {
     seriesIndex: 0,
     show:false,
-      min: 1,
-      max: 3,
+      min: 95,
+      max: 1129,
       text: ['High', 'Low'],
       realtime: true,
       calculable: true,
@@ -41,8 +41,7 @@ visualMap: {
       left:'400px',
       bottom:'200px',
       inRange: {
-      color: ['#FCDB93', '#F8D8D6', '#D2FCFD']
-      }
+        color: ['#EDF6F9', '#B7D8DE', '#2A8795']      }
             },
   series: [
       {
@@ -53,41 +52,41 @@ visualMap: {
           show: true
       },
       data: [
-          { name: '河北省', value: 1 },
-          { name: '山西省', value: 2 },
-          { name: '辽宁省', value: 2 },
-          { name: '吉林省', value: 3 },
-          { name: '黑龙江省', value: 3 },
-          { name: '江苏省', value: 2 },
-          { name: '浙江省', value: 1 },
-          { name: '安徽省', value: 1 },
-          { name: '福建省', value: 2 },
-          { name: '江西省', value: 2 },
-          { name: '山东省', value: 3 },
-          { name: '河南省', value: 3 },
-          { name: '湖北省', value: 2 },
-          { name: '湖南省', value: 1 },
-          { name: '广东省', value: 1 },
-          { name: '四川省', value: 1 },
-          { name: '贵州省', value: 2 },
-          { name: '云南省', value: 2 },
-          { name: '陕西省', value: 1 },
-          { name: '甘肃省', value: 3 },
-          { name: '青海省', value: 2 },
-          { name: '台湾省', value: 2 },
-          { name: '海南省', value: 3 },
-          { name: '新疆维吾尔自治区', value: 2 },
-          { name: '西藏自治区', value: 1 },
-          { name: '广西壮族自治区', value: 2 },
-          { name: '宁夏回族自治区', value: 3 },
-          { name: '内蒙古自治区', value: 2 },
-          { name: '重庆市', value: 1 },
-          { name: '北京市', value: 1 },
-          { name: '天津市', value: 2 },
-          { name: '香港特别行政区', value: 3 },
-          { name: '澳门特别行政区', value: 2 },
-          { name: '上海市', value: 1 },
-          { name: '南海诸岛', value: 2 },   
+          { name: '河北省', value: 420 },
+          { name: '山西省', value: 216 },
+          { name: '辽宁省', value: 512 },
+          { name: '吉林省', value: 231 },
+          { name: '黑龙江省', value: 411 },
+          { name: '江苏省', value: 615 },
+          { name: '浙江省', value: 798 },
+          { name: '安徽省', value: 605 },
+          { name: '福建省', value: 375 },
+          { name: '江西省', value: 421 },
+          { name: '山东省', value: 1229 },
+          { name: '河南省', value: 519 },
+          { name: '湖北省', value: 421 },
+          { name: '湖南省', value: 482 },
+          { name: '广东省', value: 414 },
+          { name: '四川省', value: 679},
+          { name: '贵州省', value: 420 },
+          { name: '云南省', value: 343 },
+          { name: '陕西省', value: 460 },
+          { name: '甘肃省', value: 115 },
+          { name: '青海省', value: 312 },
+          { name: '台湾省', value: 0 },
+          { name: '海南省', value: 62 },
+          { name: '新疆维吾尔自治区', value: 496 },
+          { name: '西藏自治区', value: 127 },
+          { name: '广西壮族自治区', value: 560 },
+          { name: '宁夏回族自治区', value: 96 },
+          { name: '内蒙古自治区', value: 375 },
+          { name: '重庆市', value: 242 },
+          { name: '北京市', value: 238 },
+          { name: '天津市', value: 95 },
+          { name: '香港特别行政区', value: 0 },
+          { name: '澳门特别行政区', value: 0 },
+          { name: '上海市', value: 113 },
+          { name: '南海诸岛', value: 0 },   
       ],   
       },
       {
@@ -95,11 +94,11 @@ visualMap: {
                   type: 'effectScatter',
                   coordinateSystem: 'geo',
                   data: [
-                        {name: '成都', value:[103,30.5]},
-                        {name: '西安', value:[108.55,34.15]},
-                        {name: '厦门', value:[118.04,24.26]},
-                        {name: '海南', value:[109.37,19.10]},
-                        {name: '广州', value:[113.27,23.13]},
+                        {name: '成都', value:[103,30.5], tooltipContent:'成都<br/>蜀都大地，天府之国<br/>95家A级景点'},
+                        {name: '西安', value:[108.55,34.15], tooltipContent:'西安<br/>华夏故都，山水之城<br/>91家A级景点'},
+                        {name: '厦门', value:[118.04,24.26], tooltipContent:'厦门<br/>鼓浪踏歌，心翔鹭岛<br/>21家A级景点'},
+                        {name: '海南', value:[109.37,19.10], tooltipContent:'海南<br/>椰风海韵，生态海南<br/>89家A级景点'},
+                        {name: '广州', value:[113.27,23.13], tooltipContent:'广州<br/>魅力广州，梦幻之城<br/>106家A级景点'},
                     ],
                   label:{
                     formatter: '{b}',
@@ -116,10 +115,12 @@ visualMap: {
   ],
 
   tooltip: {
-      trigger: 'item',
-      formatter: '{b}',
-
-  },
+          
+          trigger: 'item',
+          position: 'top',
+          formatter:  function(params) {
+        return params.data.tooltipContent; // 根据数据点的tooltipContent属性返回悬浮框内容
+    },
   toolbox: {
       show: true,
       orient: 'vertical',
