--- a/厦门地图.html
+++ b/厦门地图.html
@@ -5,10 +5,13 @@
     <title>厦门地图</title>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-         @font-face {
+      <style>
+      @font-face {
         font-family: MyFont;
         src: url(fonts/ChillLongCangKaiShu_Regular.0b77245d.otf);
       }
+
+    </style>
 </head>
 <body style="background-color: rgba(240,248,255,0.5)">
     <div id="xiamen" style="width: 700px;height:700px;margin:0"></div>
