--- a/全国地图.html
+++ b/全国地图.html
@@ -165,7 +165,7 @@ myChart.on('click', function(params) {
             window.parent.city.location.href = '广州地图.html';
             window.parent.chart.location.href = '广州词云.html';
           }
-          else if (name === '散厦门') {
+          else if (name === '厦门') {
             window.parent.city.location.href = '厦门地图.html';
             window.parent.chart.location.href = '厦门词云.html';
           }
