--- a/厦门地图.html
+++ b/厦门地图.html
@@ -5,15 +5,15 @@
     <title>厦门地图</title>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-      <style>
+    <style>
       @font-face {
         font-family: MyFont;
-        src: url(fonts/ChillLongCangKaiShu_Regular.0b77245d.otf);
+        src: url(ChillLongCangKaiShu_Regular.0b77245d.otf);
       }
 
     </style>
 </head>
-<body style="background-color: rgba(240,248,255,0.5)">
+<body >
     <div id="xiamen" style="width: 700px;height:700px;margin:0"></div>
     <script type="text/javascript">
        var myChart = echarts.init(document.getElementById('xiamen'));   
@@ -26,7 +26,7 @@
       option = {
       title: {
           text: '厦门地图',
-                   textStyle: {
+          textStyle: {
       fontFamily: "MyFont",
           },
       },
@@ -122,7 +122,7 @@
       ],
     
       tooltip: {
-                   textStyle: {
+        textStyle: {
       fontFamily: "MyFont",
           },
           trigger: 'item',
@@ -130,10 +130,12 @@
           formatter:  function(params) {
         return params.data.tooltipContent; // 根据数据点的tooltipContent属性返回悬浮框内容
     },
+          
+      },
       toolbox: {
           show: true,
           orient: 'vertical',
-          left: 'bottom',
+          left: 'right',
           top: 'center',
           feature: {
           dataView: { readOnly: false },
