--- a/厦门地图.html
+++ b/厦门地图.html
@@ -74,12 +74,12 @@
                       type: 'effectScatter',
                       coordinateSystem: 'geo',
                       data: [
-                        {name: '厦门海沧融信海景华邑酒店（洲际集团旗下）', value:[118.05288288669158,24.491664095342998], tooltipContent: '厦门海沧融信华邑酒店地理位置优越，位于海沧湾沿海景观带，提供享有厦门海港无与伦比景致的客房以及覆盖各处的免费WiFi。<br/>评分：9.2<br/>地址：海沧区海沧大道 , 坪山南里63号'},
-                        {name: '厦门集美大学亚朵酒店', value:[118.09557699912989,24.575205959243085], tooltipContent: '厦门集美大学亚朵酒店位于厦门，距离东渡码头有15公里，提供带免费WiFi的市景客房。这家住宿距离厦门火车站有17公里，距离厦门轮渡码头有19公里，距离厦门国际会展中心有19公里。酒店配有家庭间。<br/>评分：8.2<br/>地址：集美区, 银江路183号'},
-                        {name: '厦门集美新城智选假日酒店', value:[118.00810115938293,24.621523918102515], tooltipContent: '厦门集美新城智选假日酒店坐落于厦门，距离东渡码头有17公里，配备健身中心、免费私人停车位、共用休息室和餐厅。这家住宿提供的设施包括24小时前台、行李寄存处以及免费WiFi。这家住宿禁烟，距离厦门火车站有20公里。<br/>评分：8.5<br/>地址：集美区杏林北二路22号福楼商业大厦'},
-                        {name: '厦门海港英迪格酒店', value:[118.07585762005306,24.460802479736987], tooltipContent: '高档的厦门海港英迪格酒店位于中央商务区，提供带免费有线网络连接的现代客房，为客人营造出放松的海滨氛围。所有客房均设有宽大的窗户，自然光和清新的海风可以进入客房内。<br/>评分：8.9<br/>地址：思明区, 鹭江道16号'},
-                        {name: '厦门喜来登酒店豪华酒店', value:[118.12796679746862,24.493251838749682], tooltipContent: '厦门喜来登酒店豪华是从湖里山堡和厦门国际会展中心有30分钟车程，提供现代住宿、一个室外游泳池、一个水疗中心和健身中心，内设免费停车场。<br/>评分：8.4<br/>地址：思明区嘉禾路386-1号'},
-                        {name: '厦门环岛南路海景亚朵酒店', value:[118.13985135558164,24.434171118623098], tooltipContent: '厦门环岛南路海景亚朵酒店的房间均提供平板电视、空调以及配备淋浴设施和免费洗浴用品的私人浴室。部分客房还配有休息区。<br/>评分：9.5<br/>地址：思明区黄厝塔头368号'},
+                        {name: '厦门海沧融信海景华邑酒店（洲际集团旗下）', value:[118.05288288669158,24.491664095342998], tooltipContent: '厦门海沧融信华邑酒店地理位置优越，位于海沧湾沿海<br/>景观带，提供享有厦门海港无与伦比景致的客房以及覆盖<br/>各处的免费WiFi。<br/>评分：9.2<br/>地址：海沧区海沧大道 , 坪山南里63号'},
+                        {name: '厦门集美大学亚朵酒店', value:[118.09557699912989,24.575205959243085], tooltipContent: '厦门集美大学亚朵酒店位于厦门，距离东渡码头有15公里，提供带免费<br/>WiFi的市景客房。这家住宿距离厦门火车站有17公里，距离厦门轮渡<br/>码头有19公里，距离厦门国际会展中心有19公里。<br/>酒店配有家庭间。<br/>评分：8.2<br/>地址：集美区, 银江路183号'},
+                        {name: '厦门集美新城智选假日酒店', value:[118.00810115938293,24.621523918102515], tooltipContent: '厦门集美新城智选假日酒店坐落于厦门，距离东渡码头有17公里，<br/>配备健身中心、免费私人停车位、共用休息室和餐厅。这家住宿提供的设施包括24小时前台、<br/>行李寄存处以及免费WiFi。这家住宿禁烟，距离厦门火车站<br/>有20公里。<br/>评分：8.5<br/>地址：集美区杏林北二路22号福楼商业大厦'},
+                        {name: '厦门海港英迪格酒店', value:[118.07585762005306,24.460802479736987], tooltipContent: '高档的厦门海港英迪格酒店位于中央商务区，提供带免费有线网<br/>络连接的现代客房，为客人营造出放松的海滨氛围。所有客房均设有宽大的窗户，<br/>自然光和清新的海风可以进入客房内。<br/>评分：8.9<br/>地址：思明区, 鹭江道16号'},
+                        {name: '厦门喜来登酒店豪华酒店', value:[118.12796679746862,24.493251838749682], tooltipContent: '厦门喜来登酒店豪华是从湖里山堡和厦门国际会展中心有30分钟车程，提供现代<br/>住宿、一个室外游泳池、一个水疗中心和健身中心，内设免费停车场。<br/>评分：8.4<br/>地址：思明区嘉禾路386-1号'},
+                        {name: '厦门环岛南路海景亚朵酒店', value:[118.13985135558164,24.434171118623098], tooltipContent: '厦门环岛南路海景亚朵酒店的房间均提供平板电视、空调以及配<br/>备淋浴设施和免费洗浴用品的私人浴室。部分客房还配<br/>有休息区。<br/>评分：9.5<br/>地址：思明区黄厝塔头368号'},
                        
 
                         ],
