--- a/厦门地图.html
+++ b/厦门地图.html
@@ -126,7 +126,7 @@
       fontFamily: "MyFont",
           },
           trigger: 'item',
-          position: 'bottom',
+          position: 'top',
           formatter:  function(params) {
         return params.data.tooltipContent; // 根据数据点的tooltipContent属性返回悬浮框内容
     },
