--- a/西安词云.html
+++ b/西安词云.html
@@ -41,7 +41,7 @@
       }
     </style>
   </head>
-  <body>
+ <body style="background-color: rgba(240,248,255,0.5)" >
     <center>
       <div id="main" style="height: 400px; width: 500px"></div>
       <div id="info-container">
