--- a/厦门地图.html
+++ b/厦门地图.html
@@ -13,7 +13,7 @@
 
     </style>
 </head>
-<body >
+<body style="background-color: rgba(240,248,255,0.5)">
     <div id="xiamen" style="width: 700px;height:700px;margin:0"></div>
     <script type="text/javascript">
        var myChart = echarts.init(document.getElementById('xiamen'));   
